==> mfkiwl/uCNC/uCNC/src/hal/mcus/stm32f4x/mcu_stm32f4x.c <==
#include "../../../cnc.h"
#include "core_cm4.h"
#include "stm32f4xx.h"
#include "mcumap_stm32f4x.h"
#include "../../../modules/tinyusb/tusb_config.h"
#include "../../../modules/tinyusb/src/tusb.h"
#define FLASH_EEPROM_SIZE 0x400
#define FLASH_EEPROM_PAGES (((FLASH_EEPROM_SIZE - 1) >> 10) + 1)
#define FLASH_EEPROM (FLASH_BASE + (FLASH_SIZE - 1) - ((FLASH_EEPROM_PAGES << 10) - 1))
#define FLASH_PAGE_MASK (0xFFFF - (1 << 10) + 1)
#define FLASH_PAGE_OFFSET_MASK (0xFFFF & ~FLASH_PAGE_MASK)
#define FLASH_EEPROM_PAGES (((FLASH_EEPROM_SIZE - 1) >> 11) + 1)
#define FLASH_EEPROM (FLASH_BASE + (FLASH_SIZE - 1) - ((FLASH_EEPROM_PAGES << 11) - 1))
#define FLASH_PAGE_MASK (0xFFFF - (1 << 11) + 1)
#define FLASH_PAGE_OFFSET_MASK (0xFFFF & ~FLASH_PAGE_MASK)

void servo_timer_init(void)
{
	RCC->SERVO_TIMER_ENREG |= SERVO_TIMER_APB;
	SERVO_TIMER_REG->CR1 = 0;
	SERVO_TIMER_REG->DIER = 0;
	SERVO_TIMER_REG->PSC = (F_CPU / 255000) - 1;
	SERVO_TIMER_REG->ARR = 255;
	SERVO_TIMER_REG->EGR |= 0x01;
	SERVO_TIMER_REG->SR &= ~0x01;
}

void mcu_clocks_init()
{
	// enable power clock
	SETFLAG(RCC->APB1ENR, RCC_APB1ENR_PWREN);
	// set voltage regulator scale 2
	SETFLAG(PWR->CR, (0x02UL << PWR_CR_VOS_Pos));

	FLASH->ACR = (FLASH_ACR_DCEN | FLASH_ACR_ICEN | FLASH_ACR_LATENCY_2WS);

	/* Enable HSE */
	SETFLAG(RCC->CR, RCC_CR_HSEON);
	CLEARFLAG(RCC->CR, RCC_CR_HSEBYP);
	/* Wait till HSE is ready */
	while (!(RCC->CR & RCC_CR_HSERDY))
		;

	RCC->PLLCFGR = 0;

	// Main PLL clock can be configured by the following formula:
	// choose HSI or HSE as the source:
	// fVCO = source_clock * (N / M)
	// Main PLL = fVCO / P
	// PLL48CLK = fVCO / Q
	// to make it simple just set M = external crystal
	// then all others are a fixed value to simplify making
	// fVCO = 336
	// Main PLL = fVCO / P = 336/4 = 84MHz
	// PLL48CLK = fVCO / Q = 336/7 = 48MHz
	// to run at other speeds different configuration must be applied but the limit for fast AHB is 180Mhz, APB is 90Mhz and slow APB is 45Mhz
	SETFLAG(RCC->PLLCFGR, (RCC_PLLCFGR_PLLSRC_HSE | (EXTERNAL_XTAL_MHZ << RCC_PLLCFGR_PLLM_Pos) | (PLLN << RCC_PLLCFGR_PLLN_Pos) | (PLLP << RCC_PLLCFGR_PLLP_Pos) /*main clock /4*/ | (PLLQ << RCC_PLLCFGR_PLLQ_Pos)));
	/* Enable PLL */
	SETFLAG(RCC->CR, RCC_CR_PLLON);
	/* Wait till PLL is ready */
	while (!CHECKFLAG(RCC->CR, RCC_CR_PLLRDY))
		;

	/* Configure the System clock frequency, HCLK, PCLK2 and PCLK1 prescalers */
	/* HCLK = SYSCLK, PCLK2 = HCLK, PCLK1 = HCLK / 2
	 * If crystal is 16MHz, add in PLLXTPRE flag to prescale by 2
	 */
	SETFLAG(RCC->CFGR, (uint32_t)(RCC_CFGR_HPRE_DIV1 | APB2_PRESCALER | RCC_CFGR_PPRE1_DIV2));

	/* Select PLL as system clock source */
	CLEARFLAG(RCC->CFGR, RCC_CFGR_SW);
	SETFLAG(RCC->CFGR, (0x02UL << RCC_CFGR_SW_Pos));
	/* Wait till PLL is used as system clock source */
	while ((RCC->CFGR & RCC_CFGR_SW) != (0x02UL << RCC_CFGR_SW_Pos))
		;

	SystemCoreClockUpdate();

	// µs counting is now done via Systick

	// // initialize debugger clock (used by us delay)
	// if (!(CoreDebug->DEMCR & CoreDebug_DEMCR_TRCENA_Msk))
	// {
	// 	CoreDebug->DEMCR |= CoreDebug_DEMCR_TRCENA_Msk;
	// 	DWT->CYCCNT = 0;
	// 	DWT->CTRL |= DWT_CTRL_CYCCNTENA_Msk;
	// }
}

void mcu_usart_init(void)
{
#if (INTERFACE == INTERFACE_UART)
	/*enables RCC clocks and GPIO*/
	RCC->COM_APB |= (COM_APBEN);
	mcu_config_af(TX, GPIO_AF_USART);
	mcu_config_af(RX, GPIO_AF_USART);
	/*setup UART*/
	COM_USART->CR1 = 0; // 8 bits No parity M=0 PCE=0
	COM_USART->CR2 = 0; // 1 stop bit STOP=00
	COM_USART->CR3 = 0;
	COM_USART->SR = 0;
	// //115200 baudrate
	float baudrate = ((float)(F_CPU >> 1) / ((float)(BAUDRATE * 8 * 2)));
	uint16_t brr = (uint16_t)baudrate;
	baudrate -= brr;
	brr <<= 4;
	brr += (uint16_t)roundf(16.0f * baudrate);
	COM_USART->BRR = brr;
#ifndef ENABLE_SYNC_RX
	COM_USART->CR1 |= USART_CR1_RXNEIE; // enable RXNEIE
#endif
#if (!defined(ENABLE_SYNC_TX) || !defined(ENABLE_SYNC_RX))
	NVIC_SetPriority(COM_IRQ, 3);
	NVIC_ClearPendingIRQ(COM_IRQ);
	NVIC_EnableIRQ(COM_IRQ);
#endif
	COM_USART->CR1 |= (USART_CR1_RE | USART_CR1_TE | USART_CR1_UE); // enable TE, RE and UART
#elif (INTERFACE == INTERFACE_USB)
	// configure USB as Virtual COM port
	mcu_config_input(USB_DM);
	mcu_config_input(USB_DP);
	mcu_config_af(USB_DP, GPIO_OTG_FS);
	mcu_config_af(USB_DM, GPIO_OTG_FS);
	RCC->AHB2ENR |= RCC_AHB2ENR_OTGFSEN;

	// configure ID pin
	GPIOA->MODER &= ~(GPIO_RESET << (10 << 1)); /*USB ID*/
	GPIOA->MODER |= (GPIO_AF << (10 << 1));		/*af mode*/
	GPIOA->PUPDR &= ~(GPIO_RESET << (10 << 1)); // pullup
	GPIOA->PUPDR |= (GPIO_IN_PULLUP << (10 << 1));
	GPIOA->OTYPER |= (1 << 10); // open drain
	GPIOA->OSPEEDR &= ~(GPIO_RESET << (10 << 1));
	GPIOA->OSPEEDR |= (0x02 << (10 << 1));						  // high-speed
	GPIOA->AFR[1] |= (GPIO_AFRH_AFSEL10_1 | GPIO_AFRH_AFSEL10_3); // GPIO_OTG_FS

	// GPIOA->MODER &= ~(GPIO_RESET << (9 << 1)); /*USB VBUS*/

	/* Disable all interrupts. */
	USB_OTG_FS->GINTMSK = 0U;

	// /* Clear any pending interrupts */
	USB_OTG_FS->GINTSTS = 0xBFFFFFFFU;
	// USB_OTG_FS->GINTMSK |= USB_OTG_GINTMSK_RXFLVLM;
	/* Enable interrupts matching to the Device mode ONLY */
	// USB_OTG_FS->GINTMSK |= USB_OTG_GINTMSK_USBSUSPM | USB_OTG_GINTMSK_USBRST |
	// 					   USB_OTG_GINTMSK_ENUMDNEM | USB_OTG_GINTMSK_IEPINT |
	// 					   USB_OTG_GINTMSK_OEPINT | USB_OTG_GINTMSK_IISOIXFRM |
	// 					   USB_OTG_GINTMSK_PXFRM_IISOOXFRM | USB_OTG_GINTMSK_WUIM;

	USB_OTG_FS->GINTMSK |= USB_OTG_GINTMSK_OTGINT;

	NVIC_SetPriority(OTG_FS_IRQn, 10);
	NVIC_ClearPendingIRQ(OTG_FS_IRQn);
	NVIC_EnableIRQ(OTG_FS_IRQn);

	USB_OTG_FS->GCCFG |= USB_OTG_GCCFG_NOVBUSSENS;
	USB_OTG_FS->GCCFG &= ~USB_OTG_GCCFG_VBUSBSEN;
	USB_OTG_FS->GCCFG &= ~USB_OTG_GCCFG_VBUSASEN;

	tusb_init();
#endif
}

void mcu_putc(char c)
{
#if (INTERFACE == INTERFACE_UART)
#ifdef ENABLE_SYNC_TX
	while (!(COM_USART->SR & USART_SR_TC))
		;
#endif
	COM_OUTREG = c;
#ifndef ENABLE_SYNC_TX
	COM_USART->CR1 |= (USART_CR1_TXEIE);
#endif
#elif (INTERFACE == INTERFACE_USB)
	if (c != 0)
	{
		tud_cdc_write_char(c);
	}
	if (c == '\r' || c == 0)
	{
		tud_cdc_write_flush();
	}
#endif
}

void mcu_init(void)
{
// make sure both APB1 and APB2 are running at the same clock (48MHz)
#ifndef FRAMEWORK_CLOCKS_INIT
	mcu_clocks_init();
#endif
	stm32_flash_current_page = -1;
	stm32_global_isr_enabled = false;
	mcu_io_init();
	mcu_usart_init();
	mcu_rtc_init();
#if SERVOS_MASK > 0
	servo_timer_init();
#endif
#ifdef MCU_HAS_SPI
	SPI_ENREG |= SPI_ENVAL;
	mcu_config_af(SPI_SDI, SPI_AFIO);
	mcu_config_af(SPI_CLK, SPI_AFIO);
	mcu_config_af(SPI_SDO, SPI_AFIO);
	// initialize the SPI configuration register
	SPI_REG->CR1 = SPI_CR1_SSM	   // software slave management enabled
				   | SPI_CR1_SSI   // internal slave select
				   | SPI_CR1_MSTR; // SPI master mode
								   //    | (SPI_SPEED << 3) | SPI_MODE;
	mcu_spi_config(SPI_MODE, SPI_FREQ);

	SPI_REG->CR1 |= SPI_CR1_SPE;
#endif
#ifdef MCU_HAS_I2C
	RCC->APB1ENR |= I2C_APBEN;
	mcu_config_af(I2C_SCL, I2C_AFIO);
	mcu_config_af(I2C_SDA, I2C_AFIO);
	mcu_config_pullup(I2C_SCL);
	mcu_config_pullup(I2C_SDA);
	// set opendrain
	mcu_config_opendrain(I2C_SCL);
	mcu_config_opendrain(I2C_SDA);
	// reset I2C
	I2C_REG->CR1 |= I2C_CR1_SWRST;
	I2C_REG->CR1 &= ~I2C_CR1_SWRST;
	// set max freq
	I2C_REG->CR2 |= I2C_SPEEDRANGE;
	I2C_REG->TRISE = (I2C_SPEEDRANGE + 1);
	I2C_REG->CCR |= (I2C_FREQ <= 100000UL) ? ((I2C_SPEEDRANGE * 5) & 0x0FFF) : (((I2C_SPEEDRANGE * 5 / 6) & 0x0FFF) | I2C_CCR_FS);
	// initialize the SPI configuration register
	I2C_REG->CR1 |= I2C_CR1_PE;
#endif

	mcu_disable_probe_isr();
	mcu_enable_global_isr();
}

void mcu_start_itp_isr(uint16_t ticks, uint16_t prescaller)
{
	RCC->TIMER_ENREG |= TIMER_APB;
	TIMER_REG->CR1 = 0;
	TIMER_REG->DIER = 0;
	TIMER_REG->PSC = prescaller;
	TIMER_REG->ARR = ticks;
	TIMER_REG->EGR |= 0x01;
	TIMER_REG->SR &= ~0x01;

	NVIC_SetPriority(MCU_ITP_IRQ, 1);
	NVIC_ClearPendingIRQ(MCU_ITP_IRQ);
	NVIC_EnableIRQ(MCU_ITP_IRQ);

	TIMER_REG->DIER |= 1;
	TIMER_REG->CR1 |= 1; // enable timer upcounter no preload
}

void mcu_change_itp_isr(uint16_t ticks, uint16_t prescaller)
{
	TIMER_REG->ARR = ticks;
	TIMER_REG->PSC = prescaller;
	TIMER_REG->EGR |= 0x01;
}

void mcu_stop_itp_isr(void)
{
	TIMER_REG->CR1 &= ~0x1;
	TIMER_REG->DIER &= ~0x1;
	TIMER_REG->SR &= ~0x01;
	NVIC_DisableIRQ(MCU_ITP_IRQ);
}

uint8_t mcu_i2c_write(uint8_t data, bool send_start, bool send_stop)
{
	uint32_t status = send_start ? I2C_SR1_ADDR : I2C_SR1_BTF;
	I2C_REG->SR1 &= ~I2C_SR1_AF;
	if (send_start)
	{
		// init
		I2C_REG->CR1 |= I2C_CR1_START;
		while (!((I2C_REG->SR1 & I2C_SR1_SB) && (I2C_REG->SR2 & I2C_SR2_MSL) && (I2C_REG->SR2 & I2C_SR2_BUSY)))
			;
		if (I2C_REG->SR1 & I2C_SR1_AF)
		{
			I2C_REG->CR1 |= I2C_CR1_STOP;
			while ((I2C_REG->CR1 & I2C_CR1_STOP))
				;
			return 0;
		}
	}

	I2C_REG->DR = data;
	while (!(I2C_REG->SR1 & status))
		;
	// read SR2 to clear ADDR
	if (send_start)
	{
		status = I2C_REG->SR2;
	}

	if (I2C_REG->SR1 & I2C_SR1_AF)
	{
		I2C_REG->CR1 |= I2C_CR1_STOP;
		while ((I2C_REG->CR1 & I2C_CR1_STOP))
			;
		return 0;
	}

	if (send_stop)
	{
		I2C_REG->CR1 |= I2C_CR1_STOP;
		while ((I2C_REG->CR1 & I2C_CR1_STOP))
			;
	}

	return 1;
}

uint8_t mcu_i2c_read(bool with_ack, bool send_stop)
{
	uint8_t c = 0;

	if (!with_ack)
	{
		I2C_REG->CR1 &= ~I2C_CR1_ACK;
	}
	else
	{
		I2C_REG->CR1 |= I2C_CR1_ACK;
	}

	while (!(I2C_REG->SR1 & I2C_SR1_RXNE))
		;
	;
	c = I2C_REG->DR;

	if (send_stop)
	{
		I2C_REG->CR1 |= I2C_CR1_STOP;
		while ((I2C_REG->CR1 & I2C_CR1_STOP))
			;
	}

	return c;
}

void mcu_config_timeout(mcu_timeout_delgate fp, uint32_t timeout)
{
	// up and down counter (generates half the step rate at each event)
	uint32_t clocks = (uint32_t)((F_CPU / 1000000UL) * timeout);
	uint32_t presc = 1;

	mcu_timeout_cb = fp;

	while (clocks > 0xFFFF)
	{
		presc <<= 1;
		clocks >>= 1;
	}

	presc--;
	clocks--;

	RCC->ONESHOT_TIMER_ENREG |= ONESHOT_TIMER_APB;
	ONESHOT_TIMER_REG->CR1 = 0;
	ONESHOT_TIMER_REG->DIER = 0;
	ONESHOT_TIMER_REG->PSC = presc;
	ONESHOT_TIMER_REG->ARR = clocks;
	ONESHOT_TIMER_REG->EGR |= 0x01;
	ONESHOT_TIMER_REG->SR = 0;
	ONESHOT_TIMER_REG->CNT = 0;

	NVIC_SetPriority(MCU_ONESHOT_IRQ, 1);
	NVIC_ClearPendingIRQ(MCU_ONESHOT_IRQ);
	NVIC_EnableIRQ(MCU_ONESHOT_IRQ);

	// ONESHOT_TIMER_REG->DIER |= 1;
	// ONESHOT_TIMER_REG->CR1 |= 1; // enable timer upcounter no preload
}
