==> mfkiwl/uCNC/uCNC/src/hal/mcus/lpc176x/mcu_lpc176x.c <==
#include "../../../cnc.h"
#include "system_LPC17xx.h"
#include "../../../modules/tinyusb/tusb_config.h"
#include "../../../modules/tinyusb/src/tusb.h"
#define SERVO_MIN 64

void servo_timer_init(void)
{
	LPC_SC->PCONP |= SERVO_PCONP;
	LPC_SC->SERVO_PCLKSEL_REG &= ~SERVO_PCLKSEL_VAL; // system clk/4

	SERVO_TIMER_REG->CTCR = 0;
	SERVO_TIMER_REG->CCR &= ~0x03;
	SERVO_TIMER_REG->TC = 0;
	SERVO_TIMER_REG->PC = 0;
	SERVO_TIMER_REG->PR = 0;
	SERVO_TIMER_REG->TCR |= TIM_RESET;	// Reset Counter
	SERVO_TIMER_REG->TCR &= ~TIM_RESET; // release reset
	SERVO_TIMER_REG->EMR = 0;

	SERVO_TIMER_REG->PR = ((F_CPU >> 2) / 127500) - 1; // for 1us
	SERVO_TIMER_REG->IR = 0xFFFFFFFF;

	SERVO_TIMER_REG->MR1 = SERVO_MIN;	 // minimum value for servo setup
	SERVO_TIMER_REG->MR0 = 425;	 // reset @ every 3.333ms * 6 servos = 20ms->50Hz
	SERVO_TIMER_REG->MCR = 0x0B; // Interrupt on MC0 and MC1 and reset on MC0

	NVIC_SetPriority(SERVO_TIMER_IRQ, 10);
	NVIC_ClearPendingIRQ(SERVO_TIMER_IRQ);
	NVIC_EnableIRQ(SERVO_TIMER_IRQ);

	SERVO_TIMER_REG->TCR |= TIM_ENABLE;
}

void mcu_clocks_init(void)
{
	// disable pullups
	LPC_PINCON->PINMODE0 = 0xAAAAAAAA;
	LPC_PINCON->PINMODE1 = 0xAAAAAAAA;
	LPC_PINCON->PINMODE2 = 0xAAAAAAAA;
	LPC_PINCON->PINMODE3 = 0xAAAAAAAA;
	LPC_PINCON->PINMODE4 = 0xAAAAAAAA;
	LPC_PINCON->PINMODE5 = 0xAAAAAAAA;
	LPC_PINCON->PINMODE6 = 0xAAAAAAAA;
	LPC_PINCON->PINMODE7 = 0xAAAAAAAA;
	LPC_PINCON->PINMODE8 = 0xAAAAAAAA;
	LPC_PINCON->PINMODE9 = 0xAAAAAAAA;
}

void mcu_usart_init(void)
{
#if (INTERFACE == INTERFACE_UART)
	/*mcu_config_af(TX, UART_ALT_FUNC);
	mcu_config_af(RX, UART_ALT_FUNC);
	LPC_SC->PCONP |= UART_PCONP;
	LPC_SC->UART_PCLKSEL_REG &= ~UART_PCLKSEL_MASK; // div clock by 4

	COM_USART->FCR = UART_FCR_FIFO_EN | UART_FCR_RX_RS | UART_FCR_TX_RS; // Enable FIFO and reset Rx/Tx FIFO buffers
	COM_USART->IER = 0;
	COM_USART->ACR = 0;
	COM_USART->LCR = 0;
	COM_USART->TER = 0;
	// COM_USART->FCR = 0;

	COM_USART->LCR = UART_LCR_WLEN8 | UART_LCR_DLAB_EN;

	uint32_t uartspeed = ((F_CPU >> 2) / (16 * BAUDRATE));
	COM_USART->DLL = uartspeed & 0xFF;
	COM_USART->DLM = (uartspeed >> 0x08) & 0xFF;
	while ((COM_USART->LCR & UART_LCR_DLAB_EN))
		;

	COM_USART->IER |= UART_IER_RLSINT_EN;
	#ifndef ENABLE_SYNC_RX
	COM_USART->IER |= UART_IER_RBRINT_EN;
	#endif

	COM_USART->TER |= UART_TER_TXEN;

*/
	PINSEL_CFG_Type tx = {TX_PORT, TX_BIT, UART_ALT_FUNC, PINSEL_PINMODE_PULLUP, PINSEL_PINMODE_NORMAL};
	PINSEL_ConfigPin(&tx);
	PINSEL_CFG_Type rx = {RX_PORT, RX_BIT, UART_ALT_FUNC, PINSEL_PINMODE_PULLUP, PINSEL_PINMODE_NORMAL};
	PINSEL_ConfigPin(&rx);

	CLKPWR_SetPCLKDiv(COM_PCLK, CLKPWR_PCLKSEL_CCLK_DIV_4);

	UART_CFG_Type conf = {BAUDRATE, UART_PARITY_NONE, UART_DATABIT_8, UART_STOPBIT_1};
	UART_Init(COM_USART, &conf);

	// Enable UART Transmit
	UART_TxCmd(COM_USART, ENABLE);

	// Configure Interrupts
	UART_IntConfig(COM_USART, UART_INTCFG_RLS, ENABLE);
#ifndef ENABLE_SYNC_RX
	UART_IntConfig(COM_USART, UART_INTCFG_RBR, ENABLE);
#endif

#if (!defined(ENABLE_SYNC_TX) || !defined(ENABLE_SYNC_RX))
	NVIC_SetPriority(COM_IRQ, 3);
	NVIC_ClearPendingIRQ(COM_IRQ);
	NVIC_EnableIRQ(COM_IRQ);
#endif

#elif (INTERFACE == INTERFACE_USB)
	// // configure USB as Virtual COM port
	LPC_PINCON->PINSEL1 &= ~((3 << 26) | (3 << 28)); /* P0.29 D+, P0.30 D- */
	LPC_PINCON->PINSEL1 |= ((1 << 26) | (1 << 28));	 /* PINSEL1 26.27, 28.29  = 01 */

	// todo: VBUS not used by smoothieboard (though spec requires it for self powered devices), pin used for beeper
	// todo: Goodlink used for servo4?
	// LPC_PINCON->PINSEL3 &= ~((3<< 4)|(3<<28));   /* P1.18 GoodLink, P1.30 VBUS */
	// LPC_PINCON->PINSEL3 |=  ((1<< 4)|(2<<28));   /* PINSEL3 4.5 = 01, 28.29 = 10 */

	LPC_PINCON->PINSEL4 &= ~((3 << 18)); /* P2.9 SoftConnect */
	LPC_PINCON->PINSEL4 |= ((1 << 18));	 /* PINSEL4 18.19 = 01 */

	LPC_SC->PCONP |= (1UL << 31); /* USB PCLK -> enable USB Per.       */

	LPC_USB->USBClkCtrl = 0x1A; /* Dev, PortSel, AHB clock enable */
	while ((LPC_USB->USBClkSt & 0x1A) != 0x1A)
		;

	NVIC_SetPriority(USB_IRQn, 10);
	NVIC_ClearPendingIRQ(USB_IRQn);
	NVIC_EnableIRQ(USB_IRQn);

	tusb_init();
#endif
}

void mcu_init(void)
{
	mcu_clocks_init();

	lpc_global_isr_enabled = false;

	mcu_io_init();
	mcu_usart_init();
	// SysTick is started by the framework but is not working
	// Using timer
	mcu_rtc_init();
#if SERVOS_MASK > 0
	servo_timer_init();
#endif
#ifdef MCU_HAS_SPI
	mcu_config_af(SPI_CLK, SPI_ALT_FUNC);
	mcu_config_af(SPI_SDO, SPI_ALT_FUNC);
	mcu_config_af(SPI_SDI, SPI_ALT_FUNC);
	mcu_config_af(SPI_CS, SPI_ALT_FUNC);
	LPC_SC->PCONP |= SPI_PCONP;
	LPC_SC->SPI_PCLKSEL_REG &= ~SPI_PCLKSEL_MASK; // div clock by 4
	uint8_t div = SPI_COUNTER_DIV(SPI_FREQ);
	div += (div & 0x01) ? 1 : 0;
	SPI_REG->CPSR = div;		   // internal divider
	SPI_REG->CR0 |= SPI_MODE << 6; // clock phase
	SPI_REG->CR0 |= 7 << 0;		   // 8 bits
	SPI_REG->CR1 |= 1 << 1;		   // enable SSP*/

#endif
#ifdef MCU_HAS_I2C
	PINSEL_CFG_Type scl = {I2C_SCL_PORT, I2C_SCL_BIT, I2C_ALT_FUNC, PINSEL_PINMODE_TRISTATE, PINSEL_PINMODE_OPENDRAIN};
	PINSEL_ConfigPin(&scl);
	PINSEL_CFG_Type sda = {I2C_SDA_PORT, I2C_SDA_BIT, I2C_ALT_FUNC, PINSEL_PINMODE_TRISTATE, PINSEL_PINMODE_OPENDRAIN};
	PINSEL_ConfigPin(&sda);
	I2C_Init(I2C_REG, I2C_FREQ);
	I2C_REG->I2CONSET |= I2C_I2CONSET_I2EN;
#endif

	mcu_disable_probe_isr();
	mcu_enable_global_isr();
}

void mcu_putc(char c)
{
#if (INTERFACE == INTERFACE_UART)
#ifdef ENABLE_SYNC_TX
	while (!mcu_tx_ready())
		;
#endif
	COM_OUTREG = c;
#ifndef ENABLE_SYNC_TX
	// UART_IntConfig(COM_USART, UART_INTCFG_THRE, ENABLE);
	COM_USART->IER |= UART_IER_THREINT_EN;
#endif
#elif (INTERFACE == INTERFACE_USB)
	if (c != 0)
	{
		tud_cdc_write_char(c);
	}
	if (c == '\r' || c == 0)
	{
		tud_cdc_write_flush();
	}
#endif
}

void mcu_start_itp_isr(uint16_t ticks, uint16_t prescaller)
{
	uint32_t val = (uint32_t)ticks;
	val <<= prescaller;
	LPC_SC->PCONP |= ITP_PCONP;
	LPC_SC->ITP_PCLKSEL_REG &= ~ITP_PCLKSEL_VAL; // system clk/4

	ITP_TIMER_REG->CTCR = 0;
	ITP_TIMER_REG->CCR &= ~0x03;
	ITP_TIMER_REG->TC = 0;
	ITP_TIMER_REG->PC = 0;
	ITP_TIMER_REG->PR = 0;
	ITP_TIMER_REG->TCR |= TIM_RESET;  // Reset Counter
	ITP_TIMER_REG->TCR &= ~TIM_RESET; // release reset
	ITP_TIMER_REG->EMR = 0;

	ITP_TIMER_REG->PR = ((F_CPU >> 2) / 1000000UL) - 1; // for 1us
	ITP_TIMER_REG->IR = 0xFFFFFFFF;

	ITP_TIMER_REG->MR1 = val >> 1;
	ITP_TIMER_REG->MR0 = val;
	ITP_TIMER_REG->MCR = 0x0B; // Interrupt on MC0 and MC1 and reset on MC0

	NVIC_SetPriority(ITP_TIMER_IRQ, 1);
	NVIC_ClearPendingIRQ(ITP_TIMER_IRQ);
	NVIC_EnableIRQ(ITP_TIMER_IRQ);

	// TIM_Cmd(ITP_TIMER_REG, ENABLE);
	ITP_TIMER_REG->TCR |= TIM_ENABLE;
}

void mcu_change_itp_isr(uint16_t ticks, uint16_t prescaller)
{
	uint32_t val = (uint32_t)ticks;
	val <<= prescaller;
	ITP_TIMER_REG->TCR &= ~TIM_ENABLE;
	ITP_TIMER_REG->MR1 = val >> 1;
	ITP_TIMER_REG->MR0 = val;
	ITP_TIMER_REG->TCR |= TIM_RESET;
	ITP_TIMER_REG->TCR &= ~TIM_RESET;
	ITP_TIMER_REG->TCR |= TIM_ENABLE;
}

void mcu_stop_itp_isr(void)
{
	ITP_TIMER_REG->TCR &= ~TIM_ENABLE;
	ITP_TIMER_REG->TCR |= TIM_RESET;
	ITP_TIMER_REG->TCR &= ~TIM_RESET;
	NVIC_DisableIRQ(ITP_TIMER_IRQ);
}

uint8_t mcu_i2c_write(uint8_t data, bool send_start, bool send_stop)
{
	if (send_start)
	{
		// Enter to Master Transmitter mode
		I2C_REG->I2CONSET = I2C_I2CONSET_STA;
		// Wait for complete
		while (!(I2C_REG->I2CONSET & I2C_I2CONSET_SI))
			;
		I2C_REG->I2CONCLR = I2C_I2CONCLR_STAC;
		if ((I2C_REG->I2STAT & I2C_STAT_CODE_BITMASK) != 0x08)
		{
			I2C_REG->I2CONSET = I2C_I2CONSET_STO;
			I2C_REG->I2CONCLR = I2C_I2CONCLR_SIC;
			// Wait for complete
			while (!(I2C_REG->I2CONSET & I2C_I2CONSET_STO))
				;
			return 0;
		}
	}

	// Reset STA, STO, SI
	I2C_REG->I2CONCLR = I2C_I2CONCLR_SIC | I2C_I2CONCLR_STOC | I2C_I2CONCLR_STAC;

	/* Make sure start bit is not active */
	I2C_REG->I2DAT = data & I2C_I2DAT_BITMASK;
	// Wait for complete
	while (!(I2C_REG->I2CONSET & I2C_I2CONSET_SI))
		;

	switch ((I2C_REG->I2STAT & I2C_STAT_CODE_BITMASK))
	{
	case 0x18:
	case 0x28:
	case 0x40:
	case 0x50:
		break;
	default:
		/* Make sure start bit is not active */
		I2C_REG->I2CONSET = I2C_I2CONSET_STO;
		I2C_REG->I2CONCLR = I2C_I2CONCLR_SIC;
		// Wait for complete
		while (!(I2C_REG->I2CONSET & I2C_I2CONSET_STO))
			;
		return 0;
	}

	if (send_stop)
	{
		/* Make sure start bit is not active */
		I2C_REG->I2CONSET = I2C_I2CONSET_STO;
		I2C_REG->I2CONCLR = I2C_I2CONCLR_SIC;
		// Wait for complete
		while (!(I2C_REG->I2CONSET & I2C_I2CONSET_STO))
			;
	}

	return 1;
}

uint8_t mcu_i2c_read(bool with_ack, bool send_stop)
{
	uint8_t c = 0;

	if (with_ack)
	{
		I2C_REG->I2CONSET = I2C_I2CONSET_AA;
	}
	else
	{
		I2C_REG->I2CONCLR = I2C_I2CONCLR_AAC;
	}

	I2C_REG->I2CONCLR = I2C_I2CONCLR_SIC;

	// Wait for complete
	while (!(I2C_REG->I2CONSET & I2C_I2CONSET_SI))
		;

	c = (uint8_t)(I2C_REG->I2DAT & I2C_I2DAT_BITMASK);

	if (send_stop)
	{
		/* Make sure start bit is not active */
		I2C_REG->I2CONSET = I2C_I2CONSET_STO;
		I2C_REG->I2CONCLR = I2C_I2CONCLR_SIC;
		// Wait for complete
		while (!(I2C_REG->I2CONSET & I2C_I2CONSET_STO))
			;
	}

	return c;
}

void mcu_config_timeout(mcu_timeout_delgate fp, uint32_t timeout)
{
	mcu_timeout_cb = fp;
	LPC_SC->PCONP |= ONESHOT_PCONP;
	LPC_SC->ONESHOT_PCLKSEL_REG &= ~ONESHOT_PCLKSEL_VAL; // system clk/4

	ONESHOT_TIMER_REG->CTCR = 0;
	ONESHOT_TIMER_REG->CCR &= ~0x03;
	ONESHOT_TIMER_REG->TC = 0;
	ONESHOT_TIMER_REG->PC = 0;
	ONESHOT_TIMER_REG->PR = 0;
	ONESHOT_TIMER_REG->TCR |= TIM_RESET;  // Reset Counter
	ONESHOT_TIMER_REG->TCR &= ~TIM_RESET; // release reset
	ONESHOT_TIMER_REG->EMR = 0;

	ONESHOT_TIMER_REG->PR = ((F_CPU >> 2) / 1000000UL) - 1; // for 1us
	ONESHOT_TIMER_REG->IR = 0xFFFFFFFF;

	ONESHOT_TIMER_REG->MR0 = timeout;
	ONESHOT_TIMER_REG->MCR = 0x07; // Interrupt reset and stop on MC0

	NVIC_SetPriority(ONESHOT_TIMER_IRQ, 3);
	NVIC_ClearPendingIRQ(ONESHOT_TIMER_IRQ);
	NVIC_EnableIRQ(ONESHOT_TIMER_IRQ);

	// TIM_Cmd(ONESHOT_TIMER_REG, ENABLE);
	// ONESHOT_TIMER_REG->TCR |= TIM_ENABLE;
}
